--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 						<div class="row textRow">
 							<div class="col-xs-2 col-lg-2"></div>
 							<div class="col-xs-8 col-lg-8">
-								<a href="#mainContentProgramsMenu" id="ProgramsMenu" onclick="menuSelected(event,this.id)">Explore</a>
+								<a href="#mainContentProgramsMenu" id="ProgramsMenuFooter" onclick="menuSelected(event,this.id)">Explore</a>
 							</div>
 							<div class="col-xs-2 col-lg-2"></div>
 						</div>
@@ -696,7 +696,7 @@
 						<div class="row programsForChildrenRow">
 							<div class="col-xs-2 col-lg-2"></div>
 							<div class="col-xs-8 col-lg-8">
-								<div class="col-xs-2 col-lg-4">
+								<div class="col-xs-12 col-lg-4">
 									<div class="row">
 										<img src="images/home_programs_for_children.png" alt=""/>
 									</div>
@@ -705,7 +705,7 @@
 										4 Years to 7 Years
 									</div>
 								</div>
-								<div class="col-xs-2 col-lg-4">
+								<div class="col-xs-12 col-lg-4">
 									<div class="row">
 										<img src="images/home_programs_for_children.png" alt=""/>
 									</div>
@@ -714,7 +714,7 @@
 										8 Years to 10 Years
 									</div>
 								</div>
-								<div class="col-xs-2 col-lg-4">
+								<div class="col-xs-12 col-lg-4">
 									<div class="row">
 										<img src="images/home_programs_for_children.png" alt=""/>
 									</div>
@@ -749,9 +749,9 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-2 col-lg-2"></div>
-						<div class="col-xs-8 col-lg-8">
+						<div class="col-xs-8 col-lg-8 liveSmartSeminarColumn">
 							<div class="row">
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- Gender Wise -
 									</div>
@@ -759,7 +759,7 @@
 										Seminar on improving relationships
 									</div>
 								</div>
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
 									<div class="liveSmartSeminarHeader">
 										- Dealing with Sexual Harassment -
 									</div>
@@ -769,7 +769,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
 									<div class="liveSmartSeminarHeader">
 										- The Game Changers -
 									</div>
@@ -777,7 +777,7 @@
 										Understanding children born after 2000 AD
 									</div>
 								</div>
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
 									<div class="liveSmartSeminarHeader">
 										- Marriage or Mirage -
 									</div>
@@ -787,7 +787,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
 									<div class="liveSmartSeminarHeader">
 										- You Cant Cheat Destiny -
 									</div>
@@ -795,7 +795,7 @@
 										Learn to make better decisions
 									</div>
 								</div>
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
 									<div class="liveSmartSeminarHeader">
 										- Anger Management and Response System -
 									</div>
@@ -805,7 +805,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
 									<div class="liveSmartSeminarHeader">
 										- To Be Or Not Be Spiritual -
 									</div>
@@ -813,7 +813,7 @@
 										Striking a perfect balance between the material and spiritual aspects of human existence
 									</div>
 								</div>
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
 									<div class="liveSmartSeminarHeader">
 										- Get A Life -
 									</div>
@@ -823,7 +823,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
 									<div class="liveSmartSeminarHeader">
 										- Passion With A Purpose -
 									</div>
@@ -831,7 +831,7 @@
 										Learn to have a passion with a purpose
 									</div>
 								</div>
-								<div class="col-xs-6 col-lg-6">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
 									<div class="liveSmartSeminarHeader">
 										- You In A Mirror -
 									</div>
@@ -863,31 +863,31 @@
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="row">
+					<div class="row programsByGurujiNaushirRow">
 						<div class="col-xs-2 col-lg-2"></div>
 						<div class="col-xs-8 col-lg-8">
 							Beyond Breaking Boundaries
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="row">
+					<div class="row programsByGurujiNaushirRow">
 						<div class="col-xs-2 col-lg-2"></div>
 						<div class="col-xs-8 col-lg-8">
 							Creative Mantra
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="row">
+					<div class="row programsByGurujiNaushirRow">
 						<div class="col-xs-2 col-lg-2"></div>
 						<div class="col-xs-8 col-lg-8">
 							Advanced Kriyas
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
-					<div class="row">
+					<div class="row programsByGurujiNaushirRow">
 						<div class="col-xs-2 col-lg-2"></div>
 						<div class="col-xs-8 col-lg-8">
-							Kundalini SHaktipath
+							Kundalini Shaktipath
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
