--- a/Tadekam.html
+++ b/Tadekam.html
@@ -698,7 +698,7 @@
 							<div class="col-xs-8 col-lg-8">
 								<div class="col-xs-12 col-lg-4">
 									<div class="row">
-										<img src="images/home_programs_for_children.png" alt=""/>
+										<img src="images/fun_connect.png" alt=""/>
 									</div>
 									Fun Connect
 									<div class="row programShortDescription">
@@ -707,7 +707,7 @@
 								</div>
 								<div class="col-xs-12 col-lg-4">
 									<div class="row">
-										<img src="images/home_programs_for_children.png" alt=""/>
+										<img src="images/mind_connect.png" alt=""/>
 									</div>
 									Mind Connect
 									<div class="row programShortDescription">
@@ -716,7 +716,7 @@
 								</div>
 								<div class="col-xs-12 col-lg-4">
 									<div class="row">
-										<img src="images/home_programs_for_children.png" alt=""/>
+										<img src="images/soul_connect.png" alt=""/>
 									</div>
 									Soul Connect
 									<div class="row programShortDescription">
@@ -891,6 +891,76 @@
 						</div>
 						<div class="col-xs-2 col-lg-2"></div>
 					</div>
+				</div>
+			</div>
+			<div class="row mainContent" id="mainContentContactUsMenu">
+				<div class="row headerOfContentRow">
+					<div class="col-xs-2 col-lg-2"></div>
+					<div class="col-xs-8 col-lg-8 titleContentHeader">
+						Connect With Tadekam
+						<div class="row">
+							<div class="col-xs-5 col-lg-5"></div>
+							<div class="col-xs-2 col-lg-2">
+								<div class="row">
+									<div class="col-xs-2 col-lg-4"></div>
+									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+									<div class="col-xs-2 col-lg-4"></div>
+								</div>
+							</div>
+							<div class="col-xs-5 col-lg-5"></div>
+						</div>
+					</div>
+					<div class="col-xs-2 col-lg-2"></div>
+				</div>
+				<div class="row contactUsRow">
+					<div class="col-xs-12 col-lg-12">
+						Call Us On : +91 9999999999
+					</div>
+				</div>
+				<div class="row contactUsRow">
+					<div class="col-xs-12 col-lg-12">
+						Email Us On : babajitadekam@gmail.com
+					</div>
+				</div>
+				<div class="row contactUsRow">
+					<div class="col-xs-2 col-lg-4"></div>
+					<div class="col-xs-8 col-lg-4">
+						<div class="row contactUsForm">
+							<div class="col-xs-12 col-lg-12">
+								<div class="row">
+									Kindly Fill The Form Below
+								</div>
+								<div class="row">
+									And We Will Get In Touch With You Shortly
+								</div>
+								<div class="row contactDetailsRow">
+									<div class="col-xs-3 col-lg-3">Name*</div>
+									<div class="col-xs-8 col-lg-8">
+										<input type="textbox" name="Name"/>
+									</div>
+								</div>
+								<div class="row contactDetailsRow">
+									<div class="col-xs-3 col-lg-3">Email ID*</div>
+									<div class="col-xs-8 col-lg-8">
+										<input type="textbox" name="email"/>
+									</div>
+								</div>
+								<div class="row contactDetailsRow">
+									<div class="col-xs-3 col-lg-3">Mobile No</div>
+									<div class="col-xs-8 col-lg-8">
+										<input type="textbox" name="mobile"/>
+									</div>
+								</div>
+								<div class="row contactDetailsRow">
+									<div class="col-xs-3 col-lg-3">Message</div>
+									<div class="col-xs-8 col-lg-8">
+										<textarea name="message" rows="5"></textarea>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-2 col-lg-4"></div>
 				</div>
 			</div>
 			<div class="row footer">
