--- a/index.html
+++ b/index.html
@@ -540,9 +540,14 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentProgramsMenu">
+				<div class="row">
+					<div class="col-xs-12 col-16-12 bannerPrograms">
+						<img src="images/banner_programs.png" alt="Banner Programs">
+					</div>
+				</div>
 				<div class="row headerOfContentRow">
 					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8 titleContentHeader">
+					<div class="col-xs-8 col-lg-8 titleContentHeader programsTitleHeader">
 						Our Programs
 						<div class="row">
 							<div class="col-xs-5 col-lg-5"></div>
@@ -558,113 +563,117 @@
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
-				<div class="row headerOfContentRow">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8 titleContentHeader">
-						Spiritual Programs
-					</div>
-					<div class="col-xs-2 col-lg-2"></div>
-				</div>
-				<div class="row programsContainer">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						<div class="row programsContainerRow">
-							<div class="col-xs-12 col-lg-4 programHolder">
-								<div class="row">
-									<img src="images/home_spiritual_programs.png" alt=""/>
-								</div>
-								InConnect Workshop
-								<div class="row programShortDescription">
-									A short program for orientation on the spiritual path with initiation into a powerful Guru Mantra.
-								</div>
-								<div class="row">
-									<div class="col-xs-2 col-lg-4"></div>
-									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-4"></div>
+				<div class="row spiritualProgramsContainer">
+					<div class="col-xs-12 col-lg-12">
+						<div class="row headerOfContentRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8 titleContentHeader">
+								Spiritual Programs
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row programsContainer">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								<div class="row programsContainerRow">
+									<div class="col-xs-12 col-lg-4 programHolder">
+										<div class="row">
+											<img src="images/home_spiritual_programs.png" alt=""/>
+										</div>
+										InConnect Workshop
+										<div class="row programShortDescription">
+											A short program for orientation on the spiritual path with initiation into a powerful Guru Mantra.
+										</div>
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
+									<div class="col-xs-12 col-lg-4 programHolder">
+										<div class="row">
+											<img src="images/home_spiritual_programs.png" alt=""/>
+										</div>
+										Breaking Boundaries
+										<div class="row programShortDescription">
+											These two days courses having three levels have been carefully crafted, to unleash the spiritual potential and power that lies within every human beings and break free of physical and mental limitations.
+										</div>
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
+									<div class="col-xs-12 col-lg-4 programHolder">
+										<div class="row">
+											<img src="images/home_spiritual_programs.png" alt=""/>
+										</div>
+										Tadekam Kriyas
+										<div class="row">(Basic and Advance)</div>
+										<div class="row programShortDescription">
+											These are very simple meditation practices, Mudras and Pranayams given by the Immortal Mahavatar Babaji directly to Guruji Naushir. 
+										</div>
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
 								</div>
 							</div>
-							<div class="col-xs-12 col-lg-4 programHolder">
-								<div class="row">
-									<img src="images/home_spiritual_programs.png" alt=""/>
-								</div>
-								Breaking Boundaries
-								<div class="row programShortDescription">
-									These two days courses having three levels have been carefully crafted, to unleash the spiritual potential and power that lies within every human beings and break free of physical and mental limitations.
-								</div>
-								<div class="row">
-									<div class="col-xs-2 col-lg-4"></div>
-									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-4"></div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row programsContainer">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8">
+								<div class="row programsContainerRow">
+									<div class="col-xs-12 col-lg-4 programHolder">
+										<div class="row">
+											<img src="images/home_spiritual_programs.png" alt=""/>
+										</div>
+										Dhyan Shuddhi Meditation
+										<div class="row programShortDescription">
+											An intense Shiva centric meditation program to remove negativity through by chanting of Mantras and reciting Stotras.
+										</div>
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
+									<div class="col-xs-12 col-lg-4 programHolder">
+										<div class="row">
+											<img src="images/home_spiritual_programs.png" alt=""/>
+										</div>
+										Poornima Shanti
+										<div class="row programShortDescription">
+											Full Moon meditation to draw enhanced energies from the Masters through group activity.
+										</div>
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
+									<div class="col-xs-12 col-lg-4 programHolder">
+										<div class="row">
+											<img src="images/home_spiritual_programs.png" alt=""/>
+										</div>
+										Group Chanting
+										<div class="row programShortDescription">
+											Powerful mantras given by Mahavatar Babaji chanted in groups for enhanced energetic effect
+										</div>
+										<div class="row">
+											<div class="col-xs-2 col-lg-4"></div>
+											<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
+											<div class="col-xs-2 col-lg-4"></div>
+										</div>
+									</div>
 								</div>
 							</div>
-							<div class="col-xs-12 col-lg-4 programHolder">
-								<div class="row">
-									<img src="images/home_spiritual_programs.png" alt=""/>
-								</div>
-								Tadekam Kriyas
-								<div class="row">(Basic and Advance)</div>
-								<div class="row programShortDescription">
-									These are very simple meditation practices, Mudras and Pranayams given by the Immortal Mahavatar Babaji directly to Guruji Naushir. 
-								</div>
-								<div class="row">
-									<div class="col-xs-2 col-lg-4"></div>
-									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-4"></div>
-								</div>
-							</div>
+							<div class="col-xs-2 col-lg-2"></div>
 						</div>
 					</div>
-					<div class="col-xs-2 col-lg-2"></div>
-				</div>
-				<div class="row programsContainer">
-					<div class="col-xs-2 col-lg-2"></div>
-					<div class="col-xs-8 col-lg-8">
-						<div class="row programsContainerRow">
-							<div class="col-xs-12 col-lg-4 programHolder">
-								<div class="row">
-									<img src="images/home_spiritual_programs.png" alt=""/>
-								</div>
-								Dhyan Shuddhi Meditation
-								<div class="row programShortDescription">
-									An intense Shiva centric meditation program to remove negativity through by chanting of Mantras and reciting Stotras.
-								</div>
-								<div class="row">
-									<div class="col-xs-2 col-lg-4"></div>
-									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-4"></div>
-								</div>
-							</div>
-							<div class="col-xs-12 col-lg-4 programHolder">
-								<div class="row">
-									<img src="images/home_spiritual_programs.png" alt=""/>
-								</div>
-								Poornima Shanti
-								<div class="row programShortDescription">
-									Full Moon meditation to draw enhanced energies from the Masters through group activity.
-								</div>
-								<div class="row">
-									<div class="col-xs-2 col-lg-4"></div>
-									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-4"></div>
-								</div>
-							</div>
-							<div class="col-xs-12 col-lg-4 programHolder">
-								<div class="row">
-									<img src="images/home_spiritual_programs.png" alt=""/>
-								</div>
-								Group Chanting
-								<div class="row programShortDescription">
-									Powerful mantras given by Mahavatar Babaji chanted in groups for enhanced energetic effect
-								</div>
-								<div class="row">
-									<div class="col-xs-2 col-lg-4"></div>
-									<div class="col-xs-8 col-lg-4 titleContentBorder"></div>
-									<div class="col-xs-2 col-lg-4"></div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-2 col-lg-2"></div>
 				</div>
 				<div class="row programsForChildren">
 					<div class="col-xs-12 col-lg-12">
@@ -759,7 +768,7 @@
 										Seminar on improving relationships
 									</div>
 								</div>
-								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- Dealing with Sexual Harassment -
 									</div>
@@ -769,7 +778,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- The Game Changers -
 									</div>
@@ -777,7 +786,7 @@
 										Understanding children born after 2000 AD
 									</div>
 								</div>
-								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- Marriage or Mirage -
 									</div>
@@ -787,7 +796,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- You Cant Cheat Destiny -
 									</div>
@@ -795,7 +804,7 @@
 										Learn to make better decisions
 									</div>
 								</div>
-								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- Anger Management and Response System -
 									</div>
@@ -805,7 +814,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- To Be Or Not Be Spiritual -
 									</div>
@@ -813,7 +822,7 @@
 										Striking a perfect balance between the material and spiritual aspects of human existence
 									</div>
 								</div>
-								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- Get A Life -
 									</div>
@@ -823,7 +832,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- Passion With A Purpose -
 									</div>
@@ -831,7 +840,7 @@
 										Learn to have a passion with a purpose
 									</div>
 								</div>
-								<div class="col-xs-12 col-lg-6 liveSmartSeminarColumn">
+								<div class="col-xs-12 col-lg-6 liveSmartSeminarInnerColumn">
 									<div class="liveSmartSeminarHeader">
 										- You In A Mirror -
 									</div>
@@ -894,6 +903,11 @@
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentContactUsMenu">
+				<div class="row">
+					<div class="col-xs-12 col-16-12 bannerContactUs">
+						<img src="images/banner_contact_us.png" alt="Banner Programs">
+					</div>
+				</div>
 				<div class="row headerOfContentRow">
 					<div class="col-xs-2 col-lg-2"></div>
 					<div class="col-xs-8 col-lg-8 titleContentHeader">
