Contact Us Page

--- a/Tadekam.html
+++ b/Tadekam.html
@@ -926,55 +926,65 @@
 					</div>
 					<div class="col-xs-2 col-lg-2"></div>
 				</div>
-				<div class="row contactUsRow">
-					<div class="col-xs-12 col-lg-12">
-						Call Us On : +91 9999999999
+				<div class="row">
+					<div class="col-xs-1 col-lg-2">
+						<img src="images/quote_left_flower.png" class="hideForMobile"/>
 					</div>
-				</div>
-				<div class="row contactUsRow">
-					<div class="col-xs-12 col-lg-12">
-						Email Us On : babajitadekam@gmail.com
-					</div>
-				</div>
-				<div class="row contactUsRow">
-					<div class="col-xs-2 col-lg-4"></div>
-					<div class="col-xs-8 col-lg-4">
-						<div class="row contactUsForm">
+					<div class="col-xs-10 col-lg-8 applyZeroPadding">
+						<div class="row contactUsRow">
 							<div class="col-xs-12 col-lg-12">
-								<div class="row">
-									Kindly Fill The Form Below
-								</div>
-								<div class="row">
-									And We Will Get In Touch With You Shortly
-								</div>
-								<div class="row contactDetailsRow">
-									<div class="col-xs-3 col-lg-3">Name*</div>
-									<div class="col-xs-8 col-lg-8">
-										<input type="textbox" name="Name"/>
-									</div>
-								</div>
-								<div class="row contactDetailsRow">
-									<div class="col-xs-3 col-lg-3">Email ID*</div>
-									<div class="col-xs-8 col-lg-8">
-										<input type="textbox" name="email"/>
-									</div>
-								</div>
-								<div class="row contactDetailsRow">
-									<div class="col-xs-3 col-lg-3">Mobile No</div>
-									<div class="col-xs-8 col-lg-8">
-										<input type="textbox" name="mobile"/>
-									</div>
-								</div>
-								<div class="row contactDetailsRow">
-									<div class="col-xs-3 col-lg-3">Message</div>
-									<div class="col-xs-8 col-lg-8">
-										<textarea name="message" rows="5"></textarea>
+								Call Us On : +91 9999999999
+							</div>
+						</div>
+						<div class="row contactUsRow">
+							<div class="col-xs-12 col-lg-12">
+								Email Us On : babajitadekam@gmail.com
+							</div>
+						</div>
+						<div class="row contactUsRow">
+							<div class="col-xs-1 col-lg-4"></div>
+							<div class="col-xs-10 col-lg-4 applyZeroPadding">
+								<div class="row contactUsForm">
+									<div class="col-xs-12 col-lg-12">
+										<div class="row">
+											Kindly Fill The Form Below
+										</div>
+										<div class="row">
+											And We Will Get In Touch With You Shortly
+										</div>
+										<div class="row contactDetailsRow">
+											<div class="col-xs-3 col-lg-3">Name*</div>
+											<div class="col-xs-8 col-lg-8">
+												<input type="textbox" name="Name"/>
+											</div>
+										</div>
+										<div class="row contactDetailsRow">
+											<div class="col-xs-3 col-lg-3">Email ID*</div>
+											<div class="col-xs-8 col-lg-8">
+												<input type="textbox" name="email"/>
+											</div>
+										</div>
+										<div class="row contactDetailsRow">
+											<div class="col-xs-3 col-lg-3">Mobile No</div>
+											<div class="col-xs-8 col-lg-8">
+												<input type="textbox" name="mobile"/>
+											</div>
+										</div>
+										<div class="row contactDetailsRow">
+											<div class="col-xs-3 col-lg-3">Message</div>
+											<div class="col-xs-8 col-lg-8">
+												<textarea name="message" rows="5"></textarea>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
+							<div class="col-xs-1 col-lg-4"></div>
 						</div>
 					</div>
-					<div class="col-xs-2 col-lg-4"></div>
+					<div class="col-xs-1 col-lg-2">
+						<img src="images/quote_right_flower.png" class="hideForMobile"/>
+					</div>
 				</div>
 			</div>
 			<div class="row footer">
