--- a/Tadekam.html
+++ b/Tadekam.html
@@ -902,6 +902,87 @@
 					</div>
 				</div>
 			</div>
+			<div class="row mainContent" id="mainContentGalleryMenu">
+				<div class="row">
+					<div class="col-xs-12 col-16-12 bannerGallery">
+						<img src="images/banner_gallery.png" alt="Banner Programs">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-1 col-lg-1"></div>
+					<div class="col-xs-10 col-lg-10">
+						<div class="row">
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_01.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Guruji Naushir & Govindagiri Swami
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_02.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Guruji Naushir & Govindagiri Swami
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_03.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Guruji Naushir & Govindagiri Swami
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_04.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Guruji Naushir & Govindagiri Swami
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_05.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Guruji Naushir & Govindagiri Swami
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_06.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Guruji Naushir & Govindagiri Swami
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_07.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Guruji Naushir & Govindagiri Swami
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_08.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Guruji Naushir & Govindagiri Swami
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-1 col-lg-1"></div>
+				</div>
+			</div>
 			<div class="row mainContent" id="mainContentContactUsMenu">
 				<div class="row">
 					<div class="col-xs-12 col-16-12 bannerContactUs">
