--- a/Tadekam.html
+++ b/Tadekam.html
@@ -338,8 +338,8 @@
 							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_programs_for_children.png" alt="Children">
 							</div>
-							<div class="col-xs-12 offsetExtraSmall"></div>
-							<div class="col-xs-2 offsetExtraSmall"></div>
+							<div class="col-xs-12 hideForDesktop"></div>
+							<div class="col-xs-2 hideForDesktop"></div>
 							<div class="col-xs-4 col-lg-2 homeProgramsImageHolder">
 								<img src="images/home_live_smart_seminars.png" alt="Seminars">
 							</div>
@@ -911,13 +911,20 @@
 				<div class="row">
 					<div class="col-xs-1 col-lg-1"></div>
 					<div class="col-xs-10 col-lg-10">
+						<div class="row headerOfContentRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8 titleContentHeader">
+								Gallery
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
 						<div class="row">
 							<div class="col-xs-2 col-lg-3 galleryImage">
 								<div class="row">
 									<img src="images/galleryimage_01.jpg" alt="">
 								</div>
 								<div class="row galleryImageDescription">
-									Guruji Naushir & Govindagiri Swami
+									Guruji With Govindagiri Swami
 								</div>
 							</div>
 							<div class="col-xs-2 col-lg-3 galleryImage">
@@ -925,7 +932,7 @@
 									<img src="images/galleryimage_02.jpg" alt="">
 								</div>
 								<div class="row galleryImageDescription">
-									Guruji Naushir & Govindagiri Swami
+									Tapas 2010
 								</div>
 							</div>
 							<div class="col-xs-2 col-lg-3 galleryImage">
@@ -933,7 +940,7 @@
 									<img src="images/galleryimage_03.jpg" alt="">
 								</div>
 								<div class="row galleryImageDescription">
-									Guruji Naushir & Govindagiri Swami
+									Guruji Naushir Performing Pada Puja
 								</div>
 							</div>
 							<div class="col-xs-2 col-lg-3 galleryImage">
@@ -951,7 +958,7 @@
 									<img src="images/galleryimage_05.jpg" alt="">
 								</div>
 								<div class="row galleryImageDescription">
-									Guruji Naushir & Govindagiri Swami
+									Grihapravesh Dhyanmandir, Pune
 								</div>
 							</div>
 							<div class="col-xs-2 col-lg-3 galleryImage">
@@ -959,7 +966,7 @@
 									<img src="images/galleryimage_06.jpg" alt="">
 								</div>
 								<div class="row galleryImageDescription">
-									Guruji Naushir & Govindagiri Swami
+									Grihapravesh Dhyanmandir, Pune
 								</div>
 							</div>
 							<div class="col-xs-2 col-lg-3 galleryImage">
@@ -967,7 +974,7 @@
 									<img src="images/galleryimage_07.jpg" alt="">
 								</div>
 								<div class="row galleryImageDescription">
-									Guruji Naushir & Govindagiri Swami
+									Dhyanmandir, Pune
 								</div>
 							</div>
 							<div class="col-xs-2 col-lg-3 galleryImage">
@@ -975,12 +982,118 @@
 									<img src="images/galleryimage_08.jpg" alt="">
 								</div>
 								<div class="row galleryImageDescription">
-									Guruji Naushir & Govindagiri Swami
+									Raw Himalayan Beauty
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_09.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Neelkanth
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_10.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Badrinath Falls
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_11.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Rangrasiya Mela for 350 underpriviledged children
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_12.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Rangrasiya Coloring Activity
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_13.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Rangrasiya Coloring Activity with Senior Girls
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_14.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Guruji interacting with children
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_15.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Releasing of balloons in Rangrasiya Mela
+								</div>
+							</div>
+							<div class="col-xs-2 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_16.jpg" alt="">
+								</div>
+								<div class="row galleryImageDescription">
+									Team Tadekam with members Trustees of Nirmany (NGO)
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-xs-1 col-lg-1"></div>
+				</div>
+				<div class="row">
+					<div class="col-xs-1 col-lg-1"></div>
+					<div class="col-xs-10 col-lg-10">
+						<div class="row headerOfContentRow">
+							<div class="col-xs-2 col-lg-2"></div>
+							<div class="col-xs-8 col-lg-8 titleContentHeader">
+								Tadekam Children's Programmes
+							</div>
+							<div class="col-xs-2 col-lg-2"></div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12 col-lg-3 galleryImage">
+								<div class="row">
+									<div class="col-xs-2 hideForDesktop"></div>
+									<div class="col-xs-8 col-lg-12">
+										<img src="images/galleryimage_children_01.jpg" alt="">
+									</div>
+									<div class="col-xs-2 hideForDesktop"></div>
+								</div>
+							</div>
+							<div class="col-xs-8 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_children_02.jpg" alt="">
+								</div>
+							</div>
+							<div class="col-xs-8 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_children_03.jpg" alt="">
+								</div>
+							</div>
+							<div class="col-xs-8 col-lg-3 galleryImage">
+								<div class="row">
+									<img src="images/galleryimage_children_04.jpg" alt="">
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="row mainContent" id="mainContentContactUsMenu">
@@ -1107,7 +1220,7 @@
 						<div class="col-xs-12 col-lg-1 columnFooterMenu" id="MediaMenuFooter" onclick="menuSelected(event,this.id,true)">Books</div>
 					</div>
 				</div>
-				<div class="col-lg-2 offsetExtraSmall"></div>
+				<div class="col-lg-2 hideForDesktop"></div>
 			</div>
 			<div class="row footerBand">
 				Copyright 2018. All Rights Reserved with Tadekam.com
